artifacts/rancher/manifests/apply.yaml
---
# Source: rancher/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rancher
  labels:
    app: rancher
    chart: rancher-2.13.1
    heritage: Helm
    release: rancher
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 444
    protocol: TCP
    name: https-internal
  selector:
    app: rancher
---
# Source: rancher/templates/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: rancher
  annotations:
  labels:
    app: rancher
    chart: rancher-2.13.1
    heritage: Helm
    release: rancher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rancher
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rancher
        release: rancher
    spec:
      priorityClassName: rancher-critical
      serviceAccountName: rancher
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - rancher
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions: 
                - key: kubernetes.io/os
                  operator: NotIn
                  values:
                  - windows
      tolerations: 
        - key: "cattle.io/os"
          value: "linux"
          effect: "NoSchedule"
          operator: "Equal"
      containers:
      - image: "rancher/rancher:v2.13.1"
        imagePullPolicy: IfNotPresent
        name: rancher
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 6666
          protocol: TCP
        args:
        # Public trusted CA - clear ca certs
        - "--no-cacerts"
        - "--http-listen-port=80"
        - "--https-listen-port=443"
        - "--add-local=true"
        startupProbe:
          httpGet:
            path: /healthz
            port: 80
          timeoutSeconds: 5
          failureThreshold: 12
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
          timeoutSeconds: 5
          periodSeconds: 30
          failureThreshold: 5
        volumeMounts:
      volumes:
---
# Source: rancher/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  labels:
    app: rancher
    chart: rancher-2.13.1
    heritage: Helm
    release: rancher
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: cattle-system-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: rancher.home.arpa  # hostname to access rancher server
    http:
      paths:
      - backend:
          service:
            name: rancher
            port:
              number: 80
        pathType: ImplementationSpecific
        path: /
  tls:
  - hosts:
    - rancher.home.arpa
    secretName: tls-rancher-ingress
